clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20050929_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20050929-1.c" (c, x86_64-unknown-linux-gnu)
global .compoundliteral : rec_A = ConstRecord { ty: Named("rec_A"), members: Array([CirInt { ty: Named("s32i"), value: "1" }, CirInt { ty: Named("s32i"), value: "2" }]) } [internal, default, align 4, dso_local]
global .compoundliteral.1 : rec_A = ConstRecord { ty: Named("rec_A"), members: Array([CirInt { ty: Named("s32i"), value: "3" }, CirInt { ty: Named("s32i"), value: "4" }]) } [internal, default, align 4, dso_local]
global .compoundliteral.2 : rec_B = ConstRecord { ty: Named("rec_B"), members: Array([GlobalView { ty: Pointer { pointee: Named("rec_A"), addr_space: None }, symbol: ".compoundliteral", indices: None }, GlobalView { ty: Pointer { pointee: Named("rec_A"), addr_space: None }, symbol: ".compoundliteral.1", indices: None }]) } [internal, default, align 8, dso_local]
global .compoundliteral.3 : rec_A = ConstRecord { ty: Named("rec_A"), members: Array([CirInt { ty: Named("s32i"), value: "5" }, CirInt { ty: Named("s32i"), value: "6" }]) } [internal, default, align 4, dso_local]
global e : rec_C = ConstRecord { ty: Named("rec_C"), members: Array([GlobalView { ty: Pointer { pointee: Named("rec_B"), addr_space: None }, symbol: ".compoundliteral.2", indices: None }, GlobalView { ty: Pointer { pointee: Named("rec_A"), addr_space: None }, symbol: ".compoundliteral.3", indices: None }]) } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %42 = get_global @e : rec_C*
                get_member
                %44 = load %43 : rec_B*, align 8
                get_member
                %46 = load %45 : rec_A*, align 8
                get_member
                %48 = load %47 : s32i, align 4
                %49 = const 1 : s32i
                cmp
                %51 = ternary %50 ? { : bool
                        %62 = const true : bool
                        yield %62
                } : {
                        %53 = get_global @e : rec_C*
                        get_member
                        %55 = load %54 : rec_B*, align 8
                        get_member
                        %57 = load %56 : rec_A*, align 8
                        get_member
                        %59 = load %58 : s32i, align 4
                        %60 = const 2 : s32i
                        cmp
                        yield %61
                }
                if %51 {
                        %52 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %21 = get_global @e : rec_C*
                get_member
                %23 = load %22 : rec_B*, align 8
                get_member
                %25 = load %24 : rec_A*, align 8
                get_member
                %27 = load %26 : s32i, align 4
                %28 = const 3 : s32i
                cmp
                %30 = ternary %29 ? { : bool
                        %41 = const true : bool
                        yield %41
                } : {
                        %32 = get_global @e : rec_C*
                        get_member
                        %34 = load %33 : rec_B*, align 8
                        get_member
                        %36 = load %35 : rec_A*, align 8
                        get_member
                        %38 = load %37 : s32i, align 4
                        %39 = const 4 : s32i
                        cmp
                        yield %40
                }
                if %30 {
                        %31 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %4 = get_global @e : rec_C*
                get_member
                %6 = load %5 : rec_A*, align 8
                get_member
                %8 = load %7 : s32i, align 4
                %9 = const 5 : s32i
                cmp
                %11 = ternary %10 ? { : bool
                        %20 = const true : bool
                        yield %20
                } : {
                        %13 = get_global @e : rec_C*
                        get_member
                        %15 = load %14 : rec_A*, align 8
                        get_member
                        %17 = load %16 : s32i, align 4
                        %18 = const 6 : s32i
                        cmp
                        yield %19
                }
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
