clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20051104_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20051104-1.c" (c, x86_64-unknown-linux-gnu)
global s : rec_anon2E0 = Zero { ty: Named("rec_anon2E0") } [external, default, align 8, dso_local]
global .str : s8i[1] = Zero { ty: Array { element_type: Named("s8i"), size: 1 } } [cir_private, default, align 1, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 0 : s32i
        %3 = get_global @s : rec_anon2E0*
        get_member
        store %2, %4, align 8
        %5 = get_global @.str : s8i[1]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = get_global @s : rec_anon2E0*
        get_member
        store %6, %8, align 8
        scope {
                %11 = get_global @s : rec_anon2E0*
                get_member
                %13 = load %12 : s32i, align 8
                %14 = cast(integral) %13 : s64i
                %15 = get_global @s : rec_anon2E0*
                get_member
                %17 = load %16 : s8i*, align 8
                ptr_stride
                %19 = load %18 : s8i, align 1
                %20 = cast(integral) %19 : s32i
                %21 = const 0 : s32i
                cmp
                if %22 {
                        %23 = const 0 : s8i
                        %24 = get_global @s : rec_anon2E0*
                        get_member
                        %26 = load %25 : s32i, align 8
                        %27 = cast(integral) %26 : s64i
                        %28 = get_global @s : rec_anon2E0*
                        get_member
                        %30 = load %29 : s8i*, align 8
                        ptr_stride
                        store %23, %31, align 1
                        yield
                }
                yield
        }
        %9 = const 0 : s32i
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
