clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20051113_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20051113-1.c" (c, x86_64-unknown-linux-gnu)
fn Sum(%arg1: rec_Struct3*) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: rec_Struct3*):
        %113 = alloca rec_Struct3*, "instrs", align 8
        %114 = alloca u64i, "__retval", align 8
        %115 = alloca u64i, "count", align 8
        %116 = alloca s32i, "i", align 4
        store %arg1, %113
        %117 = const 0 : u64i
        store %117, %115, align 8
        scope {
                %120 = const 0 : s32i
                store %120, %116, align 4
                for cond {
                        %133 = load %116 : s32i, align 4
                        %134 = load %113 : rec_Struct3*, align 8
                        get_member
                        %136 = load %135 : s32i, align 1
                        cmp
                        condition %137
                } step {
                        %121 = load %116 : s32i, align 4
                        inc
                        store %122, %116, align 4
                        yield
                } body {
                        scope {
                                %123 = load %116 : s32i, align 4
                                %124 = cast(integral) %123 : s64i
                                %125 = load %113 : rec_Struct3*, align 8
                                get_member
                                get_element
                                get_member
                                get_member
                                %130 = load %129 : u64i, align 1
                                %131 = load %115 : u64i, align 8
                                %132 = add %131, %130 : u64i
                                store %132, %115, align 8
                                yield
                        }
                        yield
                }
                yield
        }
        %118 = load %115 : u64i, align 8
        store %118, %114
        %119 = load %114 : u64i
        return %119
}
fn Sum2(%arg0: rec_Struct3*) -> s64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_Struct3*):
        %88 = alloca rec_Struct3*, "instrs", align 8
        %89 = alloca s64i, "__retval", align 8
        %90 = alloca s64i, "count", align 8
        %91 = alloca s32i, "i", align 4
        store %arg0, %88
        %92 = const 0 : s64i
        store %92, %90, align 8
        scope {
                %95 = const 0 : s32i
                store %95, %91, align 4
                for cond {
                        %108 = load %91 : s32i, align 4
                        %109 = load %88 : rec_Struct3*, align 8
                        get_member
                        %111 = load %110 : s32i, align 1
                        cmp
                        condition %112
                } step {
                        %96 = load %91 : s32i, align 4
                        inc
                        store %97, %91, align 4
                        yield
                } body {
                        scope {
                                %98 = load %91 : s32i, align 4
                                %99 = cast(integral) %98 : s64i
                                %100 = load %88 : rec_Struct3*, align 8
                                get_member
                                get_element
                                get_member
                                get_member
                                %105 = load %104 : s64i, align 1
                                %106 = load %90 : s64i, align 8
                                %107 = add %106, %105 : s64i [nsw]
                                store %107, %90, align 8
                                yield
                        }
                        yield
                }
                yield
        }
        %93 = load %90 : s64i, align 8
        store %93, %89
        %94 = load %89 : s64i
        return %94
}
fn malloc(%arg0: u64i) -> void* [external, c];
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_Struct3*, "p", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @malloc : (u64i) -> void**
        %4 = const 4 : u64i
        %5 = const 3 : u64i
        %6 = const 30 : u64i
        mul
        %8 = add %4, %7 : u64i
        %9 = call @malloc(%8) : void* [all]
        %10 = cast(bitcast) %9 : rec_Struct3*
        store %10, %1, align 8
        %11 = get_global @memset : (void*, s32i, u64i) -> void**
        %12 = load %1 : rec_Struct3*, align 8
        %13 = cast(bitcast) %12 : void*
        %14 = const 0 : s32i
        %15 = const 4 : u64i
        %16 = const 3 : u64i
        %17 = const 30 : u64i
        mul
        %19 = add %15, %18 : u64i
        %20 = call @memset(%13, %14, %19) : void* [all]
        %21 = const 3 : s32i
        %22 = load %1 : rec_Struct3*, align 8
        get_member
        store %21, %23, align 1
        %24 = const 555 : u64i
        %25 = const 0 : s64i
        %26 = load %1 : rec_Struct3*, align 8
        get_member
        get_element
        get_member
        get_member
        store %24, %30, align 1
        %31 = const 999 : u64i
        %32 = const 1 : s64i
        %33 = load %1 : rec_Struct3*, align 8
        get_member
        get_element
        get_member
        get_member
        store %31, %37, align 1
        %38 = const 4311810305 : u64i
        %39 = const 2 : s64i
        %40 = load %1 : rec_Struct3*, align 8
        get_member
        get_element
        get_member
        get_member
        store %38, %44, align 1
        %45 = const 555 : s64i
        %46 = const 0 : s64i
        %47 = load %1 : rec_Struct3*, align 8
        get_member
        get_element
        get_member
        get_member
        store %45, %51, align 1
        %52 = const 999 : s64i
        %53 = const 1 : s64i
        %54 = load %1 : rec_Struct3*, align 8
        get_member
        get_element
        get_member
        get_member
        store %52, %58, align 1
        %59 = const 4311810305 : s64i
        %60 = const 2 : s64i
        %61 = load %1 : rec_Struct3*, align 8
        get_member
        get_element
        get_member
        get_member
        store %59, %65, align 1
        scope {
                %78 = load %1 : rec_Struct3*, align 8
                %79 = call @Sum(%78) : u64i [all]
                %80 = const 555 : s32i
                %81 = const 999 : s32i
                %82 = add %80, %81 : s32i [nsw]
                %83 = cast(integral) %82 : u64i
                %84 = const 4311810305 : u64i
                %85 = add %83, %84 : u64i
                cmp
                if %86 {
                        %87 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %68 = load %1 : rec_Struct3*, align 8
                %69 = call @Sum2(%68) : s64i [all]
                %70 = const 555 : s32i
                %71 = const 999 : s32i
                %72 = add %70, %71 : s32i [nsw]
                %73 = cast(integral) %72 : s64i
                %74 = const 4311810305 : s64i
                %75 = add %73, %74 : s64i [nsw]
                cmp
                if %76 {
                        %77 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %66 = const 0 : s32i
        store %66, %0
        %67 = load %0 : s32i
        return %67
}
