clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20051215_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20051215-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i, %arg1: s32i, %arg2: s32i*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i*):
        %11 = alloca s32i, "x", align 4
        %12 = alloca s32i, "y", align 4
        %13 = alloca s32i*, "z", align 8
        %14 = alloca s32i, "__retval", align 4
        %15 = alloca s32i, "a", align 4
        %16 = alloca s32i, "b", align 4
        %17 = alloca s32i, "c", align 4
        %18 = alloca s32i, "d", align 4
        store %arg0, %11
        store %arg1, %12
        store %arg2, %13
        %19 = const 0 : s32i
        store %19, %16, align 4
        store %19, %15, align 4
        scope {
            %22 = const 0 : s32i
            store %22, %18, align 4
            for cond: {
                %40 = load %18 : s32i, align 4
                %41 = load %12 : s32i, align 4
                %42 = cmp lt %40, %41 : bool
                condition %42
            } step: {
                %23 = load %18 : s32i, align 4
                %24 = inc %23 : s32i [nsw]
                store %24, %18, align 4
                yield
            } do {
                scope {
                    scope {
                        %34 = load %13 : s32i*, align 8
                        %35 = cast(ptr_to_bool) %34 : bool
                        if %35 {
                            %36 = load %18 : s32i, align 4
                            %37 = load %13 : s32i*, align 8
                            %38 = load %37 : s32i, align 4
                            %39 = mul %36, %38 : s32i [nsw]
                            store %39, %16, align 4
                            yield
                        }
                        yield
                    }
                    scope {
                        %25 = const 0 : s32i
                        store %25, %17, align 4
                        for cond: {
                            %31 = load %17 : s32i, align 4
                            %32 = load %11 : s32i, align 4
                            %33 = cmp lt %31, %32 : bool
                            condition %33
                        } step: {
                            %26 = load %17 : s32i, align 4
                            %27 = inc %26 : s32i [nsw]
                            store %27, %17, align 4
                            yield
                        } do {
                            %28 = load %16 : s32i, align 4
                            %29 = load %15 : s32i, align 4
                            %30 = add %29, %28 : s32i [nsw]
                            store %30, %15, align 4
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %20 = load %15 : s32i, align 4
        store %20, %14
        %21 = load %14 : s32i
        return %21
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = const 3 : s32i
        %5 = const 2 : s32i
        %6 = const #cir.ptr<null> : s32i*
        %7 = call @foo(%4, %5, %6) : s32i [all]
        %8 = const 0 : s32i
        %9 = cmp ne %7, %8 : bool
        if %9 {
            %10 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
