clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20060102_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20060102-1.c" (c, x86_64-unknown-linux-gnu)
global one : s32i = 1 [external, default, align 4, dso_local]

fn f(%arg0: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %13 = alloca s32i, "x", align 4
        %14 = alloca s32i, "__retval", align 4
        store %arg0, %13
        %15 = load %13 : s32i, align 4
        %16 = const 4 : u64i
        %17 = const 8 : u64i
        %18 = mul %16, %17 : u64i
        %19 = const 1 : u64i
        %20 = sub %18, %19 : u64i
        %21 = shift right %15, %20 : s32i
        %22 = cast(int_to_bool) %21 : bool
        %23 = const -1 : s32i
        %24 = const 1 : s32i
        %25 = select %22, %23, %24 : s32i
        store %25, %14
        %26 = load %14 : s32i
        return %26
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %4 = get_global @one : s32i*
        %5 = load %4 : s32i, align 4, volatile
        %6 = call @f(%5) : s32i [all]
        %7 = get_global @one : s32i*
        %8 = load %7 : s32i, align 4, volatile
        %9 = minus %8 : s32i [nsw]
        %10 = call @f(%9) : s32i [all]
        %11 = cmp eq %6, %10 : bool
        if %11 {
            %12 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
