clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20060412_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20060412-1.c" (c, x86_64-unknown-linux-gnu)
global t : rec_T = Zero { ty: Named("rec_T") } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_S*, "p", align 8
        %2 = alloca rec_S*, "q", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = get_global @t : rec_T*
        %5 = cast(bitcast) %4 : rec_S*
        store %5, %1, align 8
        %6 = const 0 : s64i
        %7 = load %1 : rec_S*, align 8
        %8 = cast(bitcast) %7 : rec_T*
        get_member
        get_element
        store %10, %1, align 8
        %11 = load %1 : rec_S*, align 8
        %12 = const 82 : s32i
        ptr_stride
        store %13, %2, align 8
        scope {
                while {
                        %32 = load %2 : rec_S*, align 8
                        %33 = const -1 : s32i
                        ptr_stride
                        store %34, %2, align 8
                        %35 = load %1 : rec_S*, align 8
                        cmp
                        condition %36
                } do {
                        %29 = const -1 : s64i
                        %30 = load %2 : rec_S*, align 8
                        get_member
                        store %29, %31, align 8
                        yield
                }
                yield
        }
        %14 = const 0 : s64i
        %15 = load %2 : rec_S*, align 8
        get_member
        store %14, %16, align 8
        scope {
                %25 = load %2 : rec_S*, align 8
                %26 = load %1 : rec_S*, align 8
                cmp
                if %27 {
                        %28 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %19 = load %2 : rec_S*, align 8
                %20 = load %1 : rec_S*, align 8
                ptr_diff
                %22 = const 0 : s64i
                cmp
                if %23 {
                        %24 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %17 = const 0 : s32i
        store %17, %0
        %18 = load %0 : s32i
        return %18
}
